--- a/css/admin.css
+++ b/css/admin.css
@@ -3,8 +3,14 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-.wrapper{
-   
+
+.main-content{
+    padding: 3% 0;
+    
+     height: 100%;
+     
+ }.wrapper{
+  
     padding: 1%;
     width: 80%;
     margin: 0 auto;
@@ -45,10 +51,11 @@ table tr td{
 
 .btn-secondary{
     background-color:#7bed9f;
-    padding: 1%;
+    padding: 2% 4%;
     color: black;
     text-decoration: none;
     font-weight: bold;
+    border: none;
 }
 .btn-secondary:hover{
     background-color: #2ed573;
@@ -67,6 +74,7 @@ table tr td{
 /* css for changing message color in manage eployee page */
 .success{
     color: #2ed573;
+
 }
 .error{
     color:#ff4757;
@@ -99,11 +107,7 @@ form .table_thirty{
     color: #ff4757;
 }
 /* css for main content */
-.main-content{
-   padding:3%  0;
-    background-color: #f1f2f6;
-    height:60%;
-}
+
 
 .col-4{
     width:18%;
@@ -115,6 +119,7 @@ form .table_thirty{
 
 /* css for footer */
 .footer{
+ 
     background-color:#ff4757;
     color: white;
 }
