--- a/css/admin.css
+++ b/css/admin.css
@@ -6,8 +6,7 @@
 
 .main-content{
     padding: 3% 0;
-    
-     height: 100%;
+    min-height:80vh;
      
  }.wrapper{
   
@@ -85,6 +84,7 @@ table tr td{
 form .table_thirty{
     width: 30%;
 }
+
 
 /* css for menu */
 .menu{
