--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     width: 80%;
     margin: 0 auto;
     padding: 1%;
+    /* background-color:#47B4D1; */
 }
 .img-responsive{
     width: 100%;
