--- a/css/admin.css
+++ b/css/admin.css
@@ -190,3 +190,18 @@ a:hover{
     height: 80px;
     width: 80px;
 }
+.logout{
+    color: #f4f4f4;
+    text-decoration: none;
+    border: 1px solid #ff6b81;
+    padding:1%;
+    border-radius:10px;
+    background-color:#ff6b81;
+
+}
+
+.logout:hover{
+    color: #ff6b81;
+    background-color: white;
+    border: 1px solid #ff6b81;
+}
