--- a/css/forgetpass.css
+++ b/css/forgetpass.css
@@ -5,7 +5,7 @@
     
 }
 body{
-    background-color: thistle;
+    background-color: white;
 }
 img{
     /* border-radius: 50%; */
@@ -24,8 +24,8 @@ img{
 .div1{
     width: 40vw;
     height: auto;
-    background-color: #af967f8e;
-    box-shadow: 2px 2px 10px rgb(34, 32, 32);
+    background-color: #ff47569e!important;
+    box-shadow: 2px 2px 10px rgb(65, 61, 61);
    margin-top: 10rem;
    padding-top: 6rem ;
    padding-bottom: 2rem;
@@ -33,15 +33,15 @@ img{
 }
 .div1 p{
     font-size: 2.5rem;
-    color: rgb(48, 20, 48);
-    text-shadow: 0 0 4px white;
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 4px rgb(31, 31, 31);
     margin-bottom: 1rem;
 }
 .input_box label{
     display:block;
     margin-bottom: 1.5rem;
     font-size: 1.2rem;
-    color: rgb(48, 20, 48);
+    color: rgb(255, 255, 255);
 }
 input[type='email']{
     border: 1px solid white;
@@ -51,9 +51,21 @@ input[type='email']{
     padding:1rem 2rem;
      font-size: 1rem;
      outline: none;
+     margin-bottom: 1rem;
+}
+input[type='password']{
+   
+    border: 1px solid white;
+    border-radius: 30px;
+    /* height: 2rem; */
+    width: 15rem;
+    padding:1rem 2rem;
+     font-size: 1rem;
+     outline: none;
+     margin-bottom: 1rem;
 }
 input[type='submit']{
-    margin-top: 2rem;
+    margin-top: 0.8rem;
     height: rem;
     width: 10rem;
     padding: 1rem ;
@@ -61,7 +73,7 @@ input[type='submit']{
     border-radius: 30px;
     font-size: 1.5rem;
 }
-input[type='submit']:hover{
+/* input[type='submit']:hover{
  color: white;
  background-color: rgb(48, 20, 48);
-}
+} */
