--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,10 @@ fieldset{
     padding: 1%;
     font-weight: bold;
 }
+.img-responsiveOne{
+    height: 80px!important;
+    width: 80px!important;
+}
 
 
 /* CSS for Food SEarch Section */
@@ -217,6 +221,8 @@ fieldset{
     background-color: white;
     border: 1px solid #ff6b81;
 }
+
+
 
 
 
