--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,8 @@ fieldset{
     font-weight: bold;
 }
 .img-responsiveOne{
-    height: 80px!important;
-    width: 80px!important;
+    height: 80px;
+    width: 80px;
 }
 
 
