--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a:hover{
 }
 
 .btn{
-    padding: 2%;
+    padding: 1%;
     border: none;
     font-size: 1rem;
     border-radius: 5px;
@@ -326,3 +326,96 @@ fieldset{
     width: 20%;
     height: 20%;
 }
+
+.priceDetails {
+    position: relative;
+    left: 29rem;
+    top: 1.7rem;
+}
+.delivaryDetails {
+    position: relative;
+    right: 14rem;
+    bottom: 6rem;
+    width: 100%;
+}
+
+/* Some style */
+.checkout-form {
+    /* border: 1px solid black; */
+    width: 100%;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(230,237,250,1) 51%);
+}
+.checkout-form form{
+    padding:2rem;
+    border-radius: .5rem;
+    background-color: var(--bg-color);
+ }
+ 
+ .checkout-form form .flex{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+ }
+ 
+ .checkout-form form .flex .inputBox{
+    flex:1 1 30rem;
+ }
+ 
+ .checkout-form form .flex .inputBox span{
+    font-size: 1rem;
+    color:var(--black);
+    text-transform: uppercase;
+ }
+ 
+ .checkout-form form .flex .inputBox input,
+ .checkout-form form .flex .inputBox select{
+    width: 93%;
+    background-color: var(--white);
+    font-size: 1rem;
+    color:var(--black);
+    border-radius: .5rem;
+    margin:1rem 0;
+    padding:1.2rem 1.4rem;
+    text-transform: none;
+    border:var(--border);
+    outline: none;
+ }
+
+
+.display-order{
+    max-width: 50rem;
+    background-color: var(--white);
+    border-radius: .5rem;
+    text-align: center;
+    padding:1.5rem;
+    margin:0 auto;
+    margin-bottom: 2rem;
+    box-shadow: var(--box-shadow);
+    border:var(--border);
+ }
+ 
+ .display-order span{
+    display: inline-block;
+    border-radius: .5rem;
+    background-color: var(--bg-color);
+    padding:.5rem 1.5rem;
+    font-size: 2rem;
+    color:var(--black);
+    margin:.5rem;
+ }
+ 
+ .display-order span.grand-total{
+    width: 100%;
+    background-color: var(--red);
+    color:var(--white);
+    padding:1rem;
+    margin-top: 1rem;
+ }
+
+ .order-btn {
+    width: 100%;
+    background-color: greenyellow;
+    font-weight: 600;
+    cursor: pointer;
+ }
