--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,10 @@ fieldset{
 
 
 /* CSSS for navbar section */
-
+ 
+.navbar{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 .logo{
     width: 10%;
     float: left;
@@ -343,79 +346,82 @@ fieldset{
 .checkout-form {
     /* border: 1px solid black; */
     width: 100%;
-    background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(230,237,250,1) 51%);
+   
 }
-.checkout-form form{
-    padding:2rem;
-    border-radius: .5rem;
-    background-color: var(--bg-color);
+.checkout-form .checkoutDiv {
+  
+    border-bottom: 2px solid #ff6b818a;
+}
+.checkout-form .checkoutDiv .heading{
+    margin: 20px 10px;
+ 
+}
+.display-order{
+  margin-left:0;
+  border-bottom: 2px solid #ff6b818a;
+  display: flex;
+  flex-direction: row;
+  font-size: 1.2rem!important;
+  padding:20px 0px;
+ }
+ 
+ .display-order .displayorder{
+    margin-left:20px;
+    margin-right:60rem;
+    
  }
  
  .checkout-form form .flex{
+    
+    padding: 20px;
+    border-bottom: 2px solid #ff6b818a;
+ }
+ 
+ .checkout-form form .flex .subinputtype{
+   display:flex;
+   flex-direction: row;
+   margin:10px 0px;
+   }
+ 
+   .checkout-form form .flex .subinputtype .inputBox{
+    margin-right: 90px;
+    font-size: 15px;
+   }
+ 
+   .checkout-form form .flex .subinputtype .inputBox input{
+        width: 220px;
+        height:20px;
+        border: 1px solid rgba(128, 128, 128, 0.482);
+        padding-left: 5px;
+        outline: none;
+   }
+   .payment{
+    margin-left:0;
+    border-bottom: 2px solid #ff6b818a;
     display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
- }
- 
- .checkout-form form .flex .inputBox{
-    flex:1 1 30rem;
- }
- 
- .checkout-form form .flex .inputBox span{
-    font-size: 1rem;
-    color:var(--black);
-    text-transform: uppercase;
- }
- 
- .checkout-form form .flex .inputBox input,
- .checkout-form form .flex .inputBox select{
-    width: 93%;
-    background-color: var(--white);
-    font-size: 1rem;
-    color:var(--black);
-    border-radius: .5rem;
-    margin:1rem 0;
-    padding:1.2rem 1.4rem;
-    text-transform: none;
-    border:var(--border);
-    outline: none;
- }
-
-
-.display-order{
-    max-width: 50rem;
-    background-color: var(--white);
-    border-radius: .5rem;
-    text-align: center;
-    padding:1.5rem;
-    margin:0 auto;
-    margin-bottom: 2rem;
-    box-shadow: var(--box-shadow);
-    border:var(--border);
- }
- 
- .display-order span{
-    display: inline-block;
-    border-radius: .5rem;
-    background-color: var(--bg-color);
-    padding:.5rem 1.5rem;
-    font-size: 2rem;
-    color:var(--black);
-    margin:.5rem;
- }
- 
- .display-order span.grand-total{
-    width: 100%;
-    background-color: var(--red);
-    color:var(--white);
-    padding:1rem;
-    margin-top: 1rem;
- }
-
+    flex-direction: column;
+   
+    padding:20px 20px;
+   }
+   .method{
+    
+        width: 220px;
+        height:20px;
+        border: 1px solid rgba(128, 128, 128, 0.482);
+        padding-left: 5px;
+        outline: none;
+   }
+   .delivery_payment{
+    margin-top: 10px;
+    display:flex;
+    flex-direction: row;
+   }
  .order-btn {
-    width: 100%;
-    background-color: greenyellow;
+    margin-top: 10px;
+    width: 30%;
+    box-shadow: #ff6b818a 0px 30px 60px -12px inset, #ff6b81 0px 18px 36px -18px inset;
     font-weight: 600;
     cursor: pointer;
+    letter-spacing:2px;
+    margin-left:500px;
  }
