--- a/css/admin.css
+++ b/css/admin.css
@@ -205,3 +205,7 @@ a:hover{
     background-color: white;
     border: 1px solid #ff6b81;
 }
+
+.item-shawdow {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
