--- a/css/style.css
+++ b/css/style.css
@@ -530,3 +530,95 @@ fieldset{
 .cTable tr td{
     text-align: center;
 }
+
+.main-content {
+    background-color: ghostwhite;
+    display: flex;
+    justify-content: space-around;
+    height: 20rem;
+}
+
+.main-content > div {
+    background-color: #FFFFFF;
+    width: 50%;
+    /* border: 2px solid black; */
+}
+
+.get_touch {
+    background-color: #ff6b8141;
+    text-align: center;
+    height: 100%;
+}
+
+.get_touch h1 {
+    font-size: 4rem;
+    color: #33475B;
+    position: relative;
+    top: 5rem;
+}
+
+/* .get_touch p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+    top: 5rem;
+    
+} */
+
+.back_img {
+    background-image: url('https://www.compliancegate.com/wp-content/uploads/2020/02/food-contact-material-regulations-eu.jpg');
+    object-fit: cover;
+}
+
+.sec_content {
+    background-color: ghostwhite;
+    display: flex;
+    justify-content: space-around;
+    height: 20rem;
+}
+
+.sec_content > div {
+    /* background-color: #683e3e; */
+    width: 50%;
+}
+
+.com_info div {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-top: 4rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    height: 75%;
+    text-align: center;
+}
+
+.contact_info div {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-top: 4rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.contact_info div form label {
+    margin-left: 1rem;
+
+}
+
+.contact_info div form input {
+    margin-left: 2rem;
+}
+
+.update_btn {
+    box-shadow: rgba(213, 214, 130, 0.76) 0px 30px 60px -12px inset, rgb(23 230 133) 0px 18px 36px -18px inset;
+    font-weight: 600;
+    cursor: pointer;
+    letter-spacing: 2px;
+    height: 40px;
+    width: 150px;
+    border: none;
+}
+
+.update_input {
+    width: 3rem;
+    padding: 10px 0 10px 10px;
+    text-align: center;
+    border: 1px dotted green;
+}
